# implodesc

./: .gitignore  CLAUDE.md  global_state.md
backend/: .coverage  .env.example  README.md  coverage.xml  debug_config.py  pyproject.toml
backend/src/implodesc/: __init__.py  main.py
backend/src/implodesc/api/routes/: analysis.py  health.py
backend/src/implodesc/core/: config.py  logging.py
backend/src/implodesc/services/: ai_service.py  analysis_service.py  api_key_service.py
backend/tests/unit/: test_config.py  test_health.py  test_main.py
docs/: development_log.md
frontend/: .env.local.example  README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/app/__tests__/test/: page.test.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: APIKeyInput.tsx  SupplyChainVisualization.tsx  navbar.tsx
frontend/src/components/__tests__/: navbar.test.tsx
frontend/src/lib/: utils.ts
plans/: plan_for_ai_integration.md  plan_for_initial_setup.md
shared/: __init__.py  api_schemas.py  carbon_models.py  schemas.py  setup.py
